Add portfolio content and structure to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,124 @@
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio | José María Belmonte González</title>
+  <link rel="stylesheet" href="css.css">
+</head>
+
+<body>
+
+  <header>
+    <h1>José María Belmonte González</h1>
+    <p>
+      Estudiante de 1º de Desarrollo de Aplicaciones Web, con interés en el
+      desarrollo web frontend y backend y en seguir creciendo como programador.
+    </p>
+  </header>
+
+  <main>
+
+    <section>
+      <h2>Sobre mí</h2>
+      <div class="card">
+        <p>
+          Mi nombre es José María Belmonte González y actualmente curso 1º de
+          Desarrollo de Aplicaciones Web. Durante mi formación he adquirido
+          conocimientos en desarrollo web, trabajando tanto el lado visual como
+          la lógica de las aplicaciones.
+        </p>
+        <p style="margin-top: 0.8rem;">
+          Me considero una persona constante, con ganas de aprender y de mejorar
+          mis habilidades a través de proyectos prácticos, cuidando el código y
+          aplicando buenas prácticas.
+        </p>
+      </div>
+    </section>
+
+    <section>
+      <h2>Tecnologías</h2>
+      <div class="card grid grid-2">
+        <ul class="skills">
+          <li>HTML5</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>PHP</li>
+          <li>Tailwind CSS</li>
+          <li>Git y GitHub</li>
+        </ul>
+      </div>
+    </section>
+
+    <section>
+      <h2>Proyectos</h2>
+      <div class="grid grid-2">
+
+        <div class="card project">
+          <h3>Portfolio Personal</h3>
+          <p>
+            Portfolio web totalmente responsive desarrollado con HTML, CSS y
+            JavaScript. El objetivo del proyecto es presentarme como estudiante
+            de DAW y mostrar mis conocimientos y evolución.
+          </p>
+          <a href="#">Ver repositorio en GitHub</a>
+        </div>
+
+      </div>
+    </section>
+
+    <section>
+      <h2>Ejemplos de código</h2>
+      <div class="grid grid-2">
+
+        <div class="card project">
+          <h3>Validación de formulario (JavaScript)</h3>
+          <p>
+            Ejemplo de validación de formularios en JavaScript utilizando
+            eventos, control de errores y buenas prácticas.
+          </p>
+          <a href="#">Ver código en GitHub</a>
+        </div>
+
+        <div class="card project">
+          <h3>Formulario con PHP</h3>
+          <p>
+            Ejemplo de procesamiento de formularios en PHP con validación
+            de datos en el servidor y estructura clara del código.
+          </p>
+          <a href="#">Ver código en GitHub</a>
+        </div>
+
+      </div>
+    </section>
+
+    <section>
+      <h2>Contacto</h2>
+      <div class="card contact">
+        <p>
+          <strong>Email:</strong>
+          <a href="mailto:josemaribelmonte1@gmail.com" target="_blank">
+            josemaribelmonte1@gmail.com
+          </a>
+        </p>
+        <p>
+          <strong>GitHub:</strong>
+          <a href="https://github.com/josemariabelmontegonzalez-lab/portf" target="_blank">
+            https://github.com/josemariabelmontegonzalez-lab/portf
+          </a>
+        </p>
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    <p>© 2026 José María Belmonte González · Portfolio académico DAW</p>
+  </footer>
+
+  <script src="js.js"></script>
+
+</body>
+
+</html>
