--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             JavaScript. El objetivo del proyecto es presentarme como estudiante
             de DAW y mostrar mis conocimientos y evolución.
           </p>
-          <a href="#">Ver repositorio en GitHub</a>
+          <a href="https://github.com/josemariabelmontegonzalez-lab/portf/tree/main">Ver repositorio en GitHub</a>
         </div>
 
       </div>
