--- a/index.html
+++ b/index.html
@@ -78,18 +78,8 @@
             Ejemplo de validación de formularios en JavaScript utilizando
             eventos, control de errores y buenas prácticas.
           </p>
-          <a href="#">Ver código en GitHub</a>
+          <a href="https://github.com/josemariabelmontegonzalez-lab/portf/tree/main/validacion">Ver código en GitHub</a>
         </div>
-
-        <div class="card project">
-          <h3>Formulario con PHP</h3>
-          <p>
-            Ejemplo de procesamiento de formularios en PHP con validación
-            de datos en el servidor y estructura clara del código.
-          </p>
-          <a href="#">Ver código en GitHub</a>
-        </div>
-
       </div>
     </section>
 
