--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             Ejemplo de validación de formularios en JavaScript utilizando
             eventos, control de errores y buenas prácticas.
           </p>
-          <a href="https://github.com/josemariabelmontegonzalez-lab/portf/tree/main/validacion">Ver código en GitHub</a>
+          <a href="https://github.com/josemariabelmontegonzalez-lab/portf/blob/main/validacion/ejemplo_validacion.js">Ver código en GitHub</a>
         </div>
       </div>
     </section>
